welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur() && getDirection()=="WEST") {
        ^SnakeBuggle:40: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur() && getDirection()=="WEST") {
        ^